inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__empty.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  016 015 014 013 012 011 010 009 008 009 010 011 012 013 014 015
  015 014 013 012 011 010 009 008 007 008 009 010 011 012 013 014
  014 013 012 011 010 009 008 007 006 007 008 009 010 011 012 013
  013 012 011 010 009 008 007 006 005 006 007 008 009 010 011 012
  012 011 010 009 008 007 006 005 004 005 006 007 008 009 010 011
  011 010 009 008 007 006 005 004 003 004 005 006 007 008 009 010
  010 009 008 007 006 005 004 003 002 003 004 005 006 007 008 009
  009 008 007 006 005 004 003 002 001 002 003 004 005 006 007 008
  008 007 006 005 004 003 002 001 000 001 002 003 004 005 006 007
  009 008 007 006 005 004 003 002 001 002 003 004 005 006 007 008
  010 009 008 007 006 005 004 003 002 003 004 005 006 007 008 009
  011 010 009 008 007 006 005 004 003 004 005 006 007 008 009 010
  012 011 010 009 008 007 006 005 004 005 006 007 008 009 010 011
  013 012 011 010 009 008 007 006 005 006 007 008 009 010 011 012
  014 013 012 011 010 009 008 007 006 007 008 009 010 011 012 013
  015 014 013 012 011 010 009 008 007 008 009 010 011 012 013 014
]
