inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__fortress.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 012 011 010 010 009 008 007 008 009 010 010 011 012 013 014
  013 013 012 009 010 009 008 007 008 009 010 009 012 013 013 013
  013 013 012 008 007 006 007 007 007 006 007 008 012 013 013 013
  013 013 012 009 008 005 006 006 006 005 008 009 012 013 013 013
  013 013 012 009 008 004 003 002 003 004 008 009 012 013 013 013
  013 013 012 009 008 005 002 001 002 005 008 009 012 013 013 013
  013 013 012 009 008 006 001 000 001 006 008 009 012 013 013 013
  013 013 012 009 008 007 002 001 002 007 008 009 012 013 013 013
]
