inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__gauntlet_close.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  024 023 022 023 024 025 025 025 025 025 025 025 025 025 025 025
  023 022 021 020 019 020 021 022 023 024 024 024 024 024 024 024
  022 021 020 019 018 019 020 021 022 023 023 023 023 023 023 023
  023 020 019 018 017 016 015 016 017 018 019 020 021 021 021 021
  024 019 018 017 016 015 014 015 016 017 018 019 020 020 020 020
  025 020 019 016 015 014 013 012 011 012 013 014 015 016 017 017
  025 021 020 015 014 013 012 011 010 011 012 013 014 015 016 016
  025 022 021 016 015 012 011 010 009 008 007 008 009 010 011 012
  025 023 022 017 016 011 010 009 008 007 006 007 008 009 010 011
  025 024 023 018 017 012 011 008 007 006 005 004 004 005 006 007
  025 024 023 019 018 013 012 007 006 005 005 004 004 005 006 007
  025 024 023 020 019 014 013 008 007 004 004 004 004 003 002 003
  025 024 023 021 020 015 014 009 008 004 004 004 004 003 002 003
  025 024 023 021 020 016 015 010 009 005 005 003 003 002 001 002
  025 024 023 021 020 017 016 011 010 006 006 002 002 001 000 001
  025 024 023 021 020 017 016 012 011 007 007 003 003 002 001 002
]
