inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__gauntlet_close_guardrail.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  015 014 014 015 255 255 255 255 255 255 255 255 255 255 255 255
  014 014 013 012 012 013 255 255 255 255 255 255 255 255 255 255
  014 013 013 012 012 013 255 255 255 255 255 255 255 255 255 255
  015 012 012 012 011 010 010 011 255 255 255 255 255 255 255 255
  255 012 012 011 011 010 010 011 255 255 255 255 255 255 255 255
  255 013 013 010 010 010 009 008 008 009 255 255 255 255 255 255
  255 255 255 010 010 009 009 008 008 009 255 255 255 255 255 255
  255 255 255 011 011 008 008 008 007 006 006 007 255 255 255 255
  255 255 255 255 255 008 008 007 007 006 006 007 255 255 255 255
  255 255 255 255 255 009 009 006 006 006 005 004 004 005 255 255
  255 255 255 255 255 255 255 006 006 005 005 004 004 005 255 255
  255 255 255 255 255 255 255 007 007 004 004 004 004 003 002 003
  255 255 255 255 255 255 255 255 255 004 004 004 004 003 002 003
  255 255 255 255 255 255 255 255 255 005 005 003 003 002 001 002
  255 255 255 255 255 255 255 255 255 255 255 002 002 001 000 001
  255 255 255 255 255 255 255 255 255 255 255 003 003 002 001 002
]
