inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__random_classic_gen_15.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  009 008 008 008 009 008 009 007 006 005 005 006 007 005 006 006
  009 008 008 008 008 008 008 008 007 005 005 006 006 005 006 006
  007 008 008 008 008 008 008 007 006 005 005 006 006 005 006 007
  007 008 008 008 008 008 008 007 006 005 005 006 006 005 006 007
  007 008 008 008 008 007 006 007 006 005 005 006 006 005 006 007
  007 007 007 007 007 007 006 007 006 005 005 006 006 005 006 006
  007 008 008 008 008 007 006 007 006 005 005 006 007 005 007 006
  007 007 007 007 007 007 006 255 255 005 005 006 006 005 006 006
  006 006 006 006 006 006 005 255 255 004 005 005 005 005 005 005
  007 007 007 007 006 005 004 003 002 003 004 005 006 005 006 006
  006 006 006 006 005 004 005 002 001 002 003 004 005 005 005 005
  005 005 005 005 004 003 002 001 000 001 002 003 004 004 004 004
  006 006 006 006 005 004 005 002 001 002 003 003 003 003 003 003
  005 005 005 005 005 005 004 003 002 003 004 004 004 004 004 004
  006 006 006 006 006 006 005 004 003 004 004 005 005 006 005 005
  007 007 007 007 007 006 005 004 003 004 004 005 006 006 006 005
]
