inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__random_classic_gen_21.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  007 006 006 005 006 006 005 005 006 006 007 007 007 007 007 007
  006 006 006 005 006 006 005 005 007 006 007 007 008 008 008 008
  006 006 006 005 006 006 005 005 005 006 007 007 007 007 007 007
  006 006 006 005 006 006 005 005 005 006 007 007 007 007 007 007
  006 006 006 005 005 006 005 005 005 006 007 006 007 007 007 007
  006 005 006 005 004 005 005 005 005 005 005 005 006 006 006 006
  005 004 003 004 003 004 004 004 004 004 004 004 007 007 007 007
  004 003 002 001 002 003 004 255 255 005 005 005 006 006 006 006
  004 003 002 001 002 002 003 255 255 006 006 006 006 007 006 006
  004 004 003 000 001 001 004 005 005 005 005 005 005 005 005 005
  005 005 004 003 002 002 003 004 005 007 006 006 007 006 006 006
  006 005 004 004 003 003 004 005 006 007 006 006 006 006 006 006
  006 005 004 005 004 004 004 005 005 005 005 005 005 005 005 005
  006 005 004 005 005 005 004 005 006 006 006 006 006 006 006 006
  006 005 004 005 006 005 004 005 006 006 006 007 007 006 007 007
  006 005 004 005 006 005 004 005 006 006 006 007 007 006 007 007
]
