inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__random_classic_gen_22.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  007 006 007 008 007 007 007 007 007 007 006 005 006 004 005 005
  007 006 007 008 008 007 007 007 007 007 006 005 005 004 005 006
  007 006 007 008 008 007 007 007 007 006 006 005 004 004 005 005
  007 006 007 007 007 007 007 006 006 006 005 004 003 004 005 005
  006 006 006 006 006 006 006 006 006 005 004 003 002 003 004 005
  005 005 005 005 005 005 005 005 005 005 005 004 001 000 003 004
  006 007 006 006 006 006 006 006 006 005 004 003 002 001 002 003
  007 007 007 007 007 007 006 255 255 004 004 003 002 001 002 003
  007 007 007 007 007 007 006 255 255 005 005 004 003 004 003 004
  008 008 008 008 008 008 006 006 006 006 005 004 004 005 004 005
  007 007 007 007 007 007 006 007 007 006 006 006 005 005 005 006
  008 008 008 008 008 007 006 007 008 006 007 007 007 005 006 006
  008 008 008 008 008 008 008 007 007 006 007 007 006 005 006 006
  007 007 007 007 007 007 007 007 007 006 007 007 006 005 006 006
  008 008 008 008 008 009 007 007 007 006 007 007 006 005 006 006
  009 008 008 009 009 008 008 007 007 006 007 007 006 005 006 006
]
