inertia-core/src/solvers/snapshots/inertia_core__solvers__group_min_moves_board__test__shuffle_x.snap
---
source: src/solvers/group_min_moves_board.rs
expression: board
---
[
  014 014 013 014 014 012 011 014 017 018 015 017 016 018 017 018
  015 014 013 014 014 012 011 014 017 018 015 017 016 017 017 017
  015 014 013 014 014 012 011 014 017 018 015 017 016 017 017 018
  013 013 013 013 013 012 011 014 016 017 015 016 016 016 016 016
  012 012 012 012 012 012 011 013 015 016 015 016 016 017 017 017
  013 013 013 013 013 012 011 012 014 015 015 015 015 015 015 015
  017 016 015 014 013 012 011 012 013 014 015 016 017 018 018 018
  016 015 014 013 012 011 010 011 012 013 014 015 016 017 017 017
  013 012 011 010 009 008 009 010 011 012 012 013 014 014 014 014
  010 009 008 007 006 007 008 009 010 011 011 011 011 011 011 011
  007 006 005 004 005 006 007 008 011 012 012 012 012 012 012 012
  005 004 003 004 005 005 006 009 012 013 013 012 013 014 014 014
  003 002 003 004 004 004 007 010 013 014 013 012 013 014 014 014
  002 001 002 003 003 005 008 011 014 015 013 012 013 013 013 013
  001 000 001 002 004 006 009 012 015 016 013 012 013 014 014 014
  002 001 002 003 005 007 010 013 016 017 013 012 013 015 015 014
]
